Fixed bugs inherited from the scrollbar fix and refactored and simplified a lot

--- a/client/stylesheets/main.less
+++ b/client/stylesheets/main.less
@@ -69,8 +69,10 @@
             width: 100%;
             text-align: left;
           }
-          .container-num-packages, .container-gross-weight, .container-volume {
-            text-align: right;
+          .num-packages-column, .gross-weight-column, .volume-column {
+            textarea {
+              text-align: right;
+            }
           }
         }
         .cargo-package {
@@ -93,8 +95,10 @@
               width: 100%;
               text-align: left;
             }
-            .package-num-packages, .package-gross-weight, .package-volume {
-              text-align: right;
+            .num-packages-column, .gross-weight-column, .volume-column {
+              textarea {
+                text-align: right;
+              }
             }
           }
         }
